--- a/css/style.css
+++ b/css/style.css
@@ -52,5 +52,34 @@
     background: unset; }
 
 /* FINAL DEL HERO */
+.nav {
+  width: 100%;
+  height: 75px;
+  background-color: #01b0fe;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Montserrat, Arial, Helvetica, Tahoma, Verdana, sans-serif;
+  font-size: 18px;
+  text-transform: uppercase; }
+  .nav .navboton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 210px;
+    height: 32px;
+    cursor: pointer; }
+  .nav .navseparador {
+    border-right: 0 solid #0097db;
+    border-right-width: 2px; }
+  .nav .navseparador:hover {
+    border-right: 0 solid #01b0fe; }
+  .nav .navtexto {
+    color: white; }
+  .nav .navtexto:hover {
+    text-transform: none;
+    color: #0a5070;
+    font-size: 22px; }
+
 body {
   margin: 0; }
