no compila dani

--- a/css/style.css
+++ b/css/style.css
@@ -52,5 +52,38 @@
     background: unset; }
 
 /* FINAL DEL HERO */
+/* MAIN-IMAGEN */
+/* COMIENZO DEL MAIN-IMAGEN*/
+.imagen {
+  height: 500px;
+  background-image: url("https://developer.playphone.com/App/Landing/img/main-slide-4.png");
+  background-size: 100%;
+  font-family: Montserrat, Arial, Helvetica, Tahoma, Verdana, sans-serif; }
+  .imagen h1 {
+    margin: 0; }
+  .imagen .contenidoimagen {
+    width: 500px;
+    height: 236px;
+    text-align: left;
+    margin-left: 141px;
+    margin-top: 39px;
+    padding-left: 100px; }
+  .imagen .tituloimagen {
+    font-size: 2.125em;
+    font-weight: normal;
+    color: #fff;
+    /*font-size: 2.125em;
+        font-weight: normal;*/
+    display: block;
+    padding-top: 80px; }
+  .imagen .parrafoimagen {
+    font-size: 1.1em;
+    font-weight: normal;
+    color: #fff;
+    /*font-size: 1.1em;
+        font-weight: normal;*/
+    padding-bottom: 110px; }
+
+/* FINAL DEL MAIN-IMAGEN */
 body {
   margin: 0; }
