--- a/scss/sections/_hero.scss
+++ b/scss/sections/_hero.scss
@@ -20,7 +20,7 @@
         padding-left: 100px;
        }
     .titulohero {
-        @include font (2.125em, normal)
+        @include font (2.125em, normal);
         color: $color-blanco;
         /*font-size: 2.125em;
         font-weight: normal;*/
@@ -28,7 +28,7 @@
         padding-top: 80px; 
         }
     .parrafohero {
-        @include font (1.1em, normal)
+        @include font (1.1em, normal);
         color: $color-blanco;
         /*font-size: 1.1em;
         font-weight: normal;*/
