--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,7 @@
 @import "../scss/abstract/variables";
+@import "../scss/abstract/mixins";
 @import "../scss/sections/hero";
+@import "../scss/sections/main";
 
 body {
     margin: 0;
