--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,29 +1,9 @@
+@import "../scss/components/button";
+@import "../scss/sections/main";
+
+
 body {
     margin:0px;
+}
 
-}
-.contenedor-button {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0px;
-    align-items: center;
-    justify-content: center;
-}
-.titulo {
-        font-size:32px;
-        height:120px;
-        padding:0px;
-        width:320px;
-        position:absolute;
-    .p {
-        position: relative;
-        width:320px;
-        align-items:center;
-    } 
-}
-   button {
-       background: rgb(120, 243, 120);
-       color:#fff;   
-       position:relative;  
-       border-radius:8px;  
-   }
+   
