--- a/scss/sections/_main.scss
+++ b/scss/sections/_main.scss
@@ -4,16 +4,11 @@
     margin: 0px;
     align-items: center;
     justify-content: center;
+    width:40%;
 }
 .titulo {
         font-size:32px;
         height:120px;
         padding:0px;
         width:320px;
-        position:absolute;
-    .p {
-        position: relative;
-        width:320px;
-        align-items:center;
-    } 
-}
+    }
