--- a/scss/sections/_hero.scss
+++ b/scss/sections/_hero.scss
@@ -4,56 +4,51 @@
 /* HERO */
 /* COMIENZO DEL HERO*/ 
 .hero{
-    height: 500px;
     background-image: url('https://developer.playphone.com/App/Landing/img/main-slide-2.png');
     background-size: 100% ;
-    font-family: Montserrat, Arial, Helvetica, Tahoma, Verdana, sans-serif;
+    height: 500px;
     h1 {
         margin: 0;
       }
     .contenidohero {
-        width: 500px;
         height: 236px;
         text-align: left;
         margin-left: 141px;
         margin-top: 39px;
         padding-left: 100px;
+        width: 500px;
        }
     .titulohero {
-        @include font (2.125em, normal);
+        @include font (2.125em, normal, Arial);
         color: $color-blanco;
-        /*font-size: 2.125em;
-        font-weight: normal;*/
+        /* font-size: 2.125em;
+        font-weight: normal;
+        font-family: Arial; */
         display: block;
         padding-top: 80px; 
         }
     .parrafohero {
-        @include font (1.1em, normal);
+        @include font (1.1em, normal, Arial);
         color: $color-blanco;
-        /*font-size: 1.1em;
-        font-weight: normal;*/
         padding-bottom: 110px;
         }
-    
     .botonhero {
-        color: $color-blanco;
+        @include font (.95em, normal, Arial);
         background: $color-naranja;
         border-color: $color-naranja;
-        font-size: .95em;
-        font-weight: normal;
         border-width: .14em;
-        display: inline-block;
-        padding: 0.75em 1.4em;
-        border-radius: 2em;
+        border-radius: 2em;       
+        border: 0.125em solid $color-naranja;
+        color: $color-blanco;
         cursor: pointer;
+        display: inline-block;
         line-height: normal;
+        padding: 0.75em 1.4em;
+        transition: background 0.4s, color 0.4s, border-color 0.4s;
         text-align: center;
         text-decoration: none;
         text-transform: uppercase;
-        border: 0.125em solid $color-naranja;
-        color: $color-blanco;
-        transition: background 0.4s, color 0.4s, border-color 0.4s;
-        }
+    }
     
     .botonhero:hover{
         color:  $color-naranja; 
