--- a/scss/abstract/_mixins.scss
+++ b/scss/abstract/_mixins.scss
@@ -1,4 +1,5 @@
-@mixin font ($font-size, $font-weight) {
+@mixin font ($font-size, $font-weight, $tipodeletra) {
     font-size: $font-size;
     font-weight: $font-weight;
+    font-family: $tipodeletra;
 }
