--- a/scss/sections/_main.scss
+++ b/scss/sections/_main.scss
@@ -4,35 +4,35 @@
 /* MAIN-IMAGEN */
 /* COMIENZO DEL MAIN-IMAGEN*/ 
 .imagen{
-    height: 500px;
     background-image: url('https://developer.playphone.com/App/Landing/img/main-slide-4.png');
     background-size: 100% ;
-    font-family: Montserrat, Arial, Helvetica, Tahoma, Verdana, sans-serif;
+    height: 500px;
+    font-family: $tipodeletra;
     h1 {
         margin: 0;
       }
     .contenidoimagen {
-        width: 500px;
         height: 236px;
-        text-align: left;
         margin-left: 141px;
         margin-top: 39px;
-        padding-left: 100px;
+        padding-left: 70px;
+        text-align: left;
+        width: 420px;
        }
     .tituloimagen {
-        @include font (1.125em, normal);
+        @include font (1.125em, normal, Arial);
         color: #99ce45;
         display: block;
-        padding-top: 80px; 
-        margin-bottom: 30px;
+        margin-bottom: 50px;
+        padding-top: 100px; 
         }
     .parrafoimagen {
-        @include font (1.1em, normal);
+        @include font (1.5em, normal, Arial);
         color: $color-blanco;
-        padding-bottom: 110px;
+        padding-bottom: 40px;
         }
     .footerimagen {
-        @include font (1.1em, normal);
+        @include font (1.1em, normal, Arial);
         color: $color-blanco;
         }
 }
