--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,3 +12,7 @@ body {
     margin: 0px;
     font-family:Montserrat, Arial, Helvetica, Tahoma, Verdana, sans-serif;
 }
+
+section {
+    margin: 0px;
+}
